--- a/src/sass/best-practices/Topics.scss
+++ b/src/sass/best-practices/Topics.scss
@@ -13,6 +13,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1em;
+
+    @include media(small) { display: block; }
   }
 
 }
