--- a/src/sass/best-practices/Topic.scss
+++ b/src/sass/best-practices/Topic.scss
@@ -15,6 +15,14 @@
   outline: none;
   transition: color $_trans-speed, background $_trans-speed, border-color $_trans-speed;
 
+  @include media(small) {
+    font-size: 14px;
+
+    margin: ($topic_margin - .1) 0;
+    margin-right: ($topic_margin - .1) * 2;
+    padding: ($topic_margin - .1) (($topic_margin - .1) * 2) ($topic_margin - .1);
+  }
+
   &:hover {
     color: $color_font-light;
 
@@ -31,7 +39,7 @@
     border-color: $color_palette-blue;
 
     &:hover {
-      background: $color_palette-blue--dark; 
+      background: $color_palette-blue--dark;
       border-color: $color_palette-blue--dark;
     }
   }
