Add links to DataCommon for Member components

--- a/src/sass/home/Member.scss
+++ b/src/sass/home/Member.scss
@@ -5,38 +5,73 @@
   font-size: 0.8rem;
   text-align: center;
 
+  a { border-radius: 50%; }
+
   .image-container {
     width: 7rem;
     height: 7rem;
 
     border-radius: 50%;
-    border: 1px solid black;
     overflow: hidden;
 
     &.orange {
       color: darken($color_palette-orange, 30);
+
       background: $color_palette-orange;
-      border-color: $color_palette-orange;
+      transition: background .12s;
+
+      &:hover {
+        background: darken($color_palette-orange, 5);
+        transition: background .12s;
+      }
     }
     &.blue {
       color: darken($color_palette-blue, 30);
+
       background: $color_palette-blue;
-      border-color: $color_palette-blue;
+      transition: background .12s;
+
+      &:hover {
+        background: darken($color_palette-blue, 5);
+        transition: background .12s;
+      }
+
     }
     &.skyblue {
       color: darken($color_palette-skyblue, 30);
+
       background: $color_palette-skyblue;
-      border-color: $color_palette-skyblue;
+      transition: background .12s;
+
+      &:hover {
+        background: darken($color_palette-skyblue, 5);
+        transition: background .12s;
+      }
+
     }
     &.green {
       color: darken($color_palette-green, 30);
+
       background: $color_palette-green;
-      border-color: $color_palette-green;
+      transition: background .12s;
+
+      &:hover {
+        background: darken($color_palette-green, 5);
+        transition: background .12s;
+      }
+
     }
     &.yellow {
       color: darken($color_palette-yellow, 30);
+
       background: $color_palette-yellow;
-      border-color: $color_palette-yellow;
+      transition: background .12s;
+
+      &:hover {
+        background: darken($color_palette-yellow, 5);
+        transition: background .12s;
+      }
+
     }
   }
 
