--- a/src/sass/best-practices/BestPractice.scss
+++ b/src/sass/best-practices/BestPractice.scss
@@ -3,6 +3,14 @@
 
   min-height: 15rem;
   border: 0.3em solid $color_palette-skyblue;
+  box-shadow: 1px 1px 2px 2px rgba($color_bg-dark, 0);
+  transition: box-shadow .15s;
+
+  &:hover {
+    box-shadow: 1px 1px 2px 2px rgba($color_bg-dark, .2);
+    cursor: pointer;
+    transition: box-shadow .15s;
+  }
 
   @include media(small) {
     min-height: 10rem;
