--- a/src/sass/best-practices/Strategies.scss
+++ b/src/sass/best-practices/Strategies.scss
@@ -5,6 +5,20 @@
     margin-bottom: $topic_margin * 4;
   }
 
+  .additional-tag {
+    display: inline-block;
+    padding: 8px 12px;
+    top: -8px;
+    margin-top: -8px;
+
+    color: $color_font-light;
+    font-size: 11px;
+    font-weight: 600;
+
+    border-radius: 3px;
+    background: $color_palette-blue;
+  }
+
   h3 { margin: 0 auto ($topic_margin / 2); }
 
   .best-practices {
@@ -14,6 +28,8 @@
 
     @include media(small) { display: block; }
   }
+
+  .additional-practices h3 { margin: 45px 0 30px; }
 
   .practice-overlay {
     position: fixed;
