--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -115,11 +115,11 @@
     .slide-content { bottom: 10%; }
   }
 
-  &:nth-of-type(4), &:nth-of-type(5) {
+  &:nth-of-type(6), &:nth-of-type(7) {
     .slide-content { top: 50%; }
   }
 
-  &:nth-of-type(3), &:nth-of-type(7), &:nth-of-type(15)  {
+  &:nth-of-type(3), &:nth-of-type(5), &:nth-of-type(8)  {
     .slide-content {
       width: 35%;
       max-width: 400px;
@@ -129,7 +129,7 @@
     .content-block { margin: 24px auto; }
   }
 
-  &:nth-of-type(6) {
+  &:nth-of-type(4) {
     .slide-content {
       width: 40%;
       right: 0;
@@ -137,21 +137,7 @@
     }
   }
 
-  &:nth-of-type(7) .slide-content { bottom: 10%; }
-
-  &:nth-of-type(8) {
-    .container { text-align: center; }
-
-    .slide-content {
-      position: relative;
-      width: 65%;
-      text-align: left;
-      margin: 0 auto;
-    }
-
-    .content-block:nth-of-type(2) { display: inline-block; line-height: $font_size-medium; margin-right: $font_size-base; }
-    .content-block:last-of-type { display: inline-block; }
-  }
+  &:nth-of-type(3) .slide-content { bottom: 10%; }
 
   &:nth-of-type(9), &:nth-of-type(10) {
     .slide-content { top: 60%; }
@@ -169,13 +155,11 @@
   }
 
   &:nth-of-type(12),
-  &:nth-of-type(14),
   &:nth-of-type(15),
   &:nth-of-type(17),
-  &:nth-of-type(19),
-  &:nth-of-type(21),
   &:nth-of-type(22),
-  &:nth-of-type(24) {
+  &:nth-of-type(23),
+  &:nth-of-type(25) {
     .slide-content {
       @extend ._vertical-center;
       top: 40%;
@@ -197,6 +181,15 @@
     .content-block { margin: 24px auto; }
   }
 
+  &:nth-of-type(14),
+  &:nth-of-type(21) {
+    .slide-image {
+      position: absolute;
+      bottom: 10%;
+      right: 10%;
+    }
+  }
+
   &:nth-of-type(15) {
     .content-block:first-of-type { left: $font_size-large; }
   }
@@ -210,11 +203,11 @@
     }
   }
 
-
   &:nth-of-type(18) {
     .slide-content {
       top: 15%;
-      left: 5%;
+      left: 10%;
+      right: 0;
 
       width: 35%;
     }
@@ -222,24 +215,20 @@
     .content-block { text-align: center; }
   }
 
-  &:nth-of-type(18) {
-    .slide-content { width: 30%; }
-  }
-
   &:nth-of-type(19) {
-    .slide-content { width: 55%; }
+    .slide-content { width: 40%; }
   }
 
+  &:nth-of-type(19),
   &:nth-of-type(20) {
     .slide-content { max-width: 900px; }
     .content-block { text-align: left; }
   }
 
-  &:nth-of-type(21) {
+  &:nth-of-type(20) {
     .slide-content {
       @extend ._vertical-center;
-      top: 40%;
-      max-width: 1050px;
+      top: 35%;
     }
   }
 
@@ -266,10 +255,7 @@
   }
 
   &:nth-of-type(25) {
-    .slide-content {
-      width: 90%;
-      max-width: 1050px;
-    }
+    .slide-content { width: 80%; max-width: 900px; }
     .content-block { text-align: left; }
   }
 
