--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -7,25 +7,25 @@
   border-bottom: 1px solid $color_bg-dark;
 
   &.light {
-    border-color: $color_font-light; 
+    border-color: $color_font-light;
 
-    h1, a { color: $color_font-light; } 
+    h1, a { color: $color_font-light; }
     a:hover { color: $color_palette-blue; }
   }
 
   &.shadowed { text-shadow: 1px 2px rgba($color_font-dark, .3); }
 
-  @include media(medium) { 
-    display: block; 
+  @include media(medium) {
+    display: block;
 
-    width: 100%; 
+    width: 100%;
     padding: 0;
 
     border-color: $color_bg-medium--dark;
   }
 
-  .title { 
-    flex: 1 0 40%; 
+  .title {
+    flex: 1 0 40%;
 
     @include media(medium) { padding: 15px 20px; }
   }
@@ -39,6 +39,8 @@
     font-size: $font_size-base;
     letter-spacing: $font_spacing-medium;
     text-transform: uppercase;
+
+    @include media(small) { font-size: $font_size-small; }
   }
 
   img {
@@ -80,7 +82,7 @@
 
     a {
       color: $color_font-dark;
-      font-size: $font_size-base; 
+      font-size: $font_size-base;
       font-weight: 500;
       letter-spacing: $font_spacing-small;
 
@@ -94,6 +96,11 @@
 
       @include media(x-small) { font-size: $font_size-base--rem - $font_mod-small; }
     }
+  }
+
+
+  &.story {
+    nav ul { background: none; }
   }
 
 }
