Fix positioning of Strategy overlay slide controls

--- a/src/sass/best-practices/Strategies.scss
+++ b/src/sass/best-practices/Strategies.scss
@@ -66,6 +66,11 @@
       max-width: 810px;
       margin: 0 auto;
 
+      @include media($_break) {
+        top: initial;
+        bottom: 10%;
+      }
+
       .slide-control {
         $_color: $color_palette-orange;
         background: $color_bg-light;
