--- a/src/sass/about/About.scss
+++ b/src/sass/about/About.scss
@@ -2,6 +2,11 @@
 
   h1 { margin: .75em auto .65em; }
 
+  #methods {
+    padding-top: 50px;
+    margin-bottom: 0px;
+  }
+
   .profile-link a {
     background: none;
 
