--- a/src/sass/best-practices/BestPractice.scss
+++ b/src/sass/best-practices/BestPractice.scss
@@ -1,6 +1,8 @@
 .component.BestPractice {
   display: flex;
 
+  margin: .5em;
+
   min-height: 15rem;
   border: 0.3em solid $color_palette-skyblue;
   box-shadow: 1px 1px 2px 2px rgba($color_bg-dark, 0);
