--- a/src/sass/home/Member.scss
+++ b/src/sass/home/Member.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 .component.Member {
   padding: 1rem;
 
@@ -15,60 +17,60 @@
     overflow: hidden;
 
     &.orange {
-      color: darken($color_palette-orange, 30);
+      color: color.adjust($color_palette-orange, $lightness: -30%);
 
       background: $color_palette-orange;
       transition: background .12s;
 
       &:hover {
-        background: darken($color_palette-orange, 5);
+        background: color.adjust($color_palette-orange, $lightness: -5%);
         transition: background .12s;
       }
     }
     &.blue {
-      color: darken($color_palette-blue, 30);
+      color: color.adjust($color_palette-blue, $lightness: -30%);
 
       background: $color_palette-blue;
       transition: background .12s;
 
       &:hover {
-        background: darken($color_palette-blue, 5);
+        background: color.adjust($color_palette-blue, $lightness: -5%);
         transition: background .12s;
       }
 
     }
     &.skyblue {
-      color: darken($color_palette-skyblue, 30);
+      color: color.adjust($color_palette-skyblue, $lightness: -30%);
 
       background: $color_palette-skyblue;
       transition: background .12s;
 
       &:hover {
-        background: darken($color_palette-skyblue, 5);
+        background: color.adjust($color_palette-skyblue, $lightness: -5%);
         transition: background .12s;
       }
 
     }
     &.green {
-      color: darken($color_palette-green, 30);
+      color: color.adjust($color_palette-green, $lightness: -30%);
 
       background: $color_palette-green;
       transition: background .12s;
 
       &:hover {
-        background: darken($color_palette-green, 5);
+        background: color.adjust($color_palette-green, $lightness: -5%);
         transition: background .12s;
       }
 
     }
     &.yellow {
-      color: darken($color_palette-yellow, 30);
+      color: color.adjust($color_palette-yellow, $lightness: -30%);
 
       background: $color_palette-yellow;
       transition: background .12s;
 
       &:hover {
-        background: darken($color_palette-yellow, 5);
+        background: color.adjust($color_palette-yellow, $lightness: -5%);
         transition: background .12s;
       }
 
@@ -101,7 +103,7 @@
   .name, .title { font-size: $font_size-small; }
 
   .name {
-    margin-top: $font_size-small / 2;
+    margin-top: calc($font_size-small / 2);
 
     font-weight: 500;
   }
