Tracking Progress component with routing

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,5 +6,6 @@
 @import 'home/all';
 @import 'guiding-principles/all';
 @import 'best-practices/all';
+@import 'tracking-progress/all';
 @import 'story/all';
 @import 'about/all';
