--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @import 'guiding-principles/all';
 @import 'best-practices/all';
 @import 'tracking-progress/all';
+@import 'taskforce-meetings/all';
 @import 'legislative-priorities/all';
 @import 'local-implementation-projects/all';
 @import 'story/all';
