--- a/src/sass/taskforce-meetings/TaskForceMeetings.scss
+++ b/src/sass/taskforce-meetings/TaskForceMeetings.scss
@@ -19,7 +19,7 @@ body {
 
 /* Header styles */
 .meetings-table th {
-    background-color: #4CAF50;
+    background-color: #6b6b6b;
     color: white;
 }
 
