Preview for image attachments, added some css classes, removed commented code

--- a/src/sass/taskforce-meetings/TaskForceMeetings.scss
+++ b/src/sass/taskforce-meetings/TaskForceMeetings.scss
@@ -47,7 +47,7 @@ body {
     margin: .75em auto 1.2em;
 }
 
-.meetings-table-header {
+.meetings-table-header, .meetings-table-data {
     border: 1px solid #ddd;
-    padding: "8px";
+    padding: 8px;
 }
